# zview.old

./: .gitignore  .travis.yml  Makefile  README.md  av_prot.c  av_prot.h  chrono.c  common.mak  configvars  debug.c  full_scr.c  full_scr.h  general.h  main.c  menu.h  pdflib.h  pic_save.c  prerequisites.txt  resample.c  rules  tiff_dialog.c  todo.txt  txt_data.h  zaes.c  zview.hrd  zview.rsc  zview.rsm
.github/workflows/: build.yml
.scripts/: build.sh  deploy.sh  install_prerequisites.sh  install_ssh_id.sh  setup_env.sh
.travis/: build.sh  deploy.sh  install_prerequisities.sh  purge-snapshots.pl  setup_env.sh
_dist/: readme.1st
_dist/goodies/: nfjpeg.prg
branches/newldg/: common.mak  todo.txt
catalog/: catalog.c  catalog_iconify.h  catalog_icons.c  catalog_keyb.c  catalog_mouse.c
common/: scancode.h  types2b.h
file/: delete.c
howto_build/: tiff-3.8.2-mint.patch
plugins/bmp/: Makefile
plugins/eureka/: Makefile  rawldg.c
plugins/gif/: gifldg.c
plugins/img/: Makefile  img.h  imgldg.c
plugins/jpg/: jpgdh.h  jpgdsp.c
plugins/png/: Makefile  pngldg.c
plugins/tga/: Makefile
plugins/tiff/: Makefile
tags/zview-1.0/: av_prot.c  mfdb.c  pdf_load.h  pref_dialog.c  wintimer.h  zaes.h  zview.rsm
tags/zview-1.0.1/: close_modal.h  custom_font.c  main.c  pdf_load.c  plugins.h  prefs.c  progress.c  txt_data.c  winimg.c  winimg.h  winpdf.c
tags/zview-beta8/: Makefile  chrono.h  general.h  infobox.c  pic_resize.h  progress.h  ztext.c
trunk/: common.mak  prerequisites.txt  todo.txt
trunk/zcodeclib/: copyright
trunk/ztask/: Makefile  color_selector.c  cpu.c  gmem.c  gmem.h  preference.c  prefs.c  shutdown.c  ztask.rsm
trunk/zview/: Makefile  av_prot.c  av_prot.h  close_modal.c  custom_font.c  custom_font.h  debug.c  full_scr.h  general.h  history.txt  infobox.h  mem.c  mem.h  menu.c  menu.h  mfdb.h  pdf_load.c  pdf_load.h  pdflib.cc  pic_load.c  pic_load.h  pic_resize.c  pic_save.c  plugins.c  pref_dialog.c  pref_dialog.h  prefs.c  prefs.h  progress.c  save_dialog.c  tiff_dialog.c  txt_data.c  types2b.h  winimg.c  winpdf.c  winpdf.h  wintimer.c  wintimer.h  zaes.c  ztext.c  (+4 more)
trunk/zweather/: Makefile  dialog.c  http_client.h  icon.h  inet.c  prefs.h  zaes.c  zweather.hrd  zweather.rsc  zweather.rsm
zcodeclib/: Makefile  zcodeclib.hyp
zcodeclib/exemple/: main.c  makefile
zcodeclib/include/: zcodec.h
zcodeclib/src/: Makefile  codecs.c  general.h  img.c  load_img.c  load_img.h  mfdb.h  resize.c  ztext.h
zedit/: char.c  libtedit.h  zedit.c  zedit.h
ztask/: Makefile  app.c  app.h  color_selector.c  cpu.c  cpu.h  font_8.h  general.h  history.txt  main.c  popup.c  popup.h  pref_panel.c  pref_panel.h  preference.c  prefs.h  process.c  process.h  string.c  string.h  taskman.c  win.c  win.h
zvdi/: color.c  pixel.c  raster_resize.c  vdi.h
zview/: Makefile  av_prot.c  av_prot.h  chrono.c  chrono.h  close_modal.c  close_modal.h  custom_font.c  custom_font.h  fonts  full_scr.c  general.h  infobox.c  infobox.h  jpg_dialog.c  latin1.h  main.c  menu.c  menu.h  mfdb.c  pdf_load.c  pdf_load.h  pdflib.cc  pdflib.h  pic_load.c  pic_load.h  pic_resize.c  pic_resize.h  pic_save.c  pic_save.h  plugins.c  plugins.h  pref_dialog.c  pref_dialog.h  prefs.c  prefs.h  progress.c  progress.h  resample.c  resample.h  (+25 more)
zview/_dist/: NEWS.TXT  README.TXT  readme.1st
zview/catalog/: catalog.c  catalog.h  catalog_entry.c  catalog_entry.h  catalog_iconify.c  catalog_iconify.h  catalog_icons.c  catalog_icons.h  catalog_keyb.c  catalog_keyb.h  catalog_mini_entry.c  catalog_mini_entry.h  catalog_mouse.c  catalog_mouse.h  catalog_other_event.c  catalog_other_event.h  catalog_popup.c  catalog_popup.h  catalog_size.c  catalog_size.h  catalog_slider.c  catalog_slider.h
zview/codecs/: .gitignore
zview/doc/: .gitignore  Makefile  config.ui  credits.ui  faq.ui  file_formats.ui  glossary.ui  helppage.ui  history.ui  intro.ui  menu.ui  notes.ui  using.ui  zview.orig.stg  zview.u
zview/file/: count.c  count.h  delete.c  file.c  file.h  rename.c  rename.h  sort.c
zview/howto_build/: howto.txt  xpdf-3.03-zview.patch  xpdf-3.04-zview.patch  xpdf-4.01.01-zview-patch
zview/ldglib/: global.h  ldg.h  ldgapp.c  ldgcook.c  (+8 more)
zview/xpdf/: .gitignore  Makefile.am  aconf.h.in  configure.ac
zview/xpdf/doc/: Makefile.am
zview/xpdf/fofi/: FoFiBase.cc  FoFiEncodings.cc  FoFiEncodings.h  FoFiIdentifier.cc  FoFiTrueType.cc  FoFiTrueType.h  FoFiType1.cc  FoFiType1C.cc  FoFiType1C.h  Makefile.am
zview/xpdf/goo/: FixedPoint.cc  FixedPoint.h  GList.cc  GList.h  GMutex.h  GString.cc  Makefile.am  Trace.cc  Trace.h  gfile.cc  gfile.h  gmem.cc  gmem.h  gmempp.h  parseargs.c  parseargs.h
zview/xpdf/splash/: Makefile.am  Splash.cc  Splash.h  SplashBitmap.cc  SplashBitmap.h  SplashClip.cc  SplashClip.h  SplashFTFont.cc  SplashFTFont.h  SplashFTFontEngine.cc  SplashFTFontEngine.h  SplashFTFontFile.cc  SplashFTFontFile.h  SplashFont.cc  SplashFontEngine.cc  SplashFontEngine.h  SplashFontFile.cc  SplashFontFile.h  SplashMath.h  SplashPath.cc  SplashPattern.cc  SplashScreen.cc  SplashScreen.h  SplashState.cc  SplashState.h  SplashTypes.h  SplashXPath.cc  SplashXPath.h  SplashXPathScanner.cc
zview/xpdf/xpdf/: .gitignore  AcroForm.cc  AcroForm.h  Annot.cc  Annot.h  Array.cc  Array.h  BuiltinFont.cc  BuiltinFont.h  BuiltinFontTables.cc  BuiltinFontTables.h  CMap.cc  CMap.h  Catalog.cc  Catalog.h  CharCodeToUnicode.cc  CharCodeToUnicode.h  Decrypt.cc  Dict.h  Error.cc  Error.h  FontEncodingTables.cc  FontEncodingTables.h  Form.cc  Form.h  Function.cc  Function.h  Gfx.cc  Gfx.h  GfxFont.cc  GfxFont.h  GfxState.cc  GfxState.h  GlobalParams.cc  GlobalParams.h  HTMLGen.cc  HTMLGen.h  ImageOutputDev.cc  ImageOutputDev.h  JArithmeticDecoder.cc  (+65 more)
zview/xpdf/xpdf-qt/: .gitignore  Makefile.am  QtPDFCore.cc  QtPDFCore.h  XpdfApp.cc  XpdfApp.h  XpdfViewer.cc  XpdfViewer.h  XpdfWidget.cc  XpdfWidget.h  XpdfWidgetPrint.cc  XpdfWidgetPrint.h
zweather/: Makefile  dialog.c  dialog.h  general.h  get_data.c  history.txt  http_client.c  icon.c  icon.h  inet.c  inet.h  main.c  parsers.c  zaes.c  zaes.h  zstring.c  zstring.h
(+757 files in other folders)
