noinst_LIBRARIES = libfofi.a

AM_CPPFLAGS = -I$(top_builddir) -I$(srcdir) -I$(top_srcdir)/goo

libfofi_a_SOURCES = \
	FoFiBase.cc FoFiBase.h \
	FoFiEncodings.cc FoFiEncodings.h \
	FoFiIdentifier.cc FoFiIdentifier.h \
	FoFiTrueType.cc FoFiTrueType.h \
	FoFiType1.cc FoFiType1.h \
	FoFiType1C.cc FoFiType1C.h \
	$(empty)
