noinst_LIBRARIES = libgoo.a

AM_CPPFLAGS = -I$(top_builddir) -I$(srcdir)

libgoo_a_SOURCES = \
	FixedPoint.cc FixedPoint.h \
	GHash.cc GHash.h \
	GList.cc GList.h \
	GMutex.h \
	GString.cc GString.h \
	gfile.cc gfile.h \
	gmem.cc gmem.h \
	gmempp.cc gmempp.h \
	gtypes.h \
	parseargs.c parseargs.h \
	Trace.cc Trace.h \
	$(empty)
