noinst_LIBRARIES = libsplash.a

AM_CPPFLAGS = -I$(top_builddir) -I$(srcdir) -I$(top_srcdir)/goo -I$(top_srcdir)/fofi $(FREETYPE2_CFLAGS)

libsplash_a_SOURCES = \
	Splash.cc Splash.h \
	SplashBitmap.cc SplashBitmap.h \
	SplashClip.cc SplashClip.h \
	SplashErrorCodes.h \
	SplashFTFont.cc SplashFTFont.h \
	SplashFTFontEngine.cc SplashFTFontEngine.h \
	SplashFTFontFile.cc SplashFTFontFile.h \
	SplashFont.cc SplashFont.h \
	SplashFontEngine.cc SplashFontEngine.h \
	SplashFontFile.cc SplashFontFile.h \
	SplashFontFileID.cc SplashFontFileID.h \
	SplashGlyphBitmap.h \
	SplashMath.h \
	SplashPath.cc SplashPath.h \
	SplashPattern.cc SplashPattern.h \
	SplashScreen.cc SplashScreen.h \
	SplashState.cc SplashState.h \
	SplashTypes.h \
	SplashXPath.cc SplashXPath.h \
	SplashXPathScanner.cc SplashXPathScanner.h \
	$(empty)
